CXBOX-1341| Added. Added tree action